--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,12 @@ html[dir=ltr] .testimonial .mo-rating i {
   text-align: center;
   padding-bottom: 25px;
 }
+@media (max-width: 767px) {
+  .product {
+    width: 95%;
+    margin: auto;
+  }
+}
 .product .item-img {
   width: 100%;
   height: 253px;
@@ -933,6 +939,11 @@ html[dir=ltr] .bootstrap-select .dropdown-toggle .filter-option {
   -webkit-box-shadow: none;
   box-shadow: none;
   margin: 30px 0 0 0;
+}
+@media (max-width: 767px) {
+  .pre-loader .progress-bar {
+    width: 100px;
+  }
 }
 .pre-loader .progress-bar .Shape_1 {
   background-color: #c30130;
