--- a/css/main.css
+++ b/css/main.css
@@ -902,6 +902,36 @@ html[dir=ltr] .bootstrap-select .dropdown-toggle .filter-option {
   align-items: center;
 }
 
+.mobile-select-cont {
+  width: 100%;
+  height: 45px;
+  position: relative;
+}
+.mobile-select-cont .mobile-select {
+  width: 100%;
+  height: 100%;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  color: #808080;
+  outline: none;
+  box-shadow: none;
+  font-size: 14px;
+  border-radius: 22.5px;
+  border: 2px solid #ededed;
+  padding: 0 25px;
+}
+.mobile-select-cont:after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #999999;
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 25px;
+}
+
 /*//////////////////////////////preloader//////////////////////////////*/
 .pre-loader {
   width: 100%;
