--- a/css/main.css
+++ b/css/main.css
@@ -906,6 +906,7 @@ html[dir=ltr] .bootstrap-select .dropdown-toggle .filter-option {
   width: 100%;
   height: 45px;
   position: relative;
+  background-color: #fff;
 }
 .mobile-select-cont .mobile-select {
   width: 100%;
@@ -919,7 +920,9 @@ html[dir=ltr] .bootstrap-select .dropdown-toggle .filter-option {
   font-size: 14px;
   border-radius: 22.5px;
   border: 2px solid #ededed;
+  background-color: #fff;
   padding: 0 25px;
+  text-decoration: none;
 }
 .mobile-select-cont:after {
   font-family: "Font Awesome 5 Free";
