--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,10 @@ html[dir=ltr] .testimonial .mo-rating i {
   margin-top: 14px;
 }
 
+.owl-carousel .owl-item .cat img {
+  width: 100%;
+}
+
 .cat {
   display: flex;
   align-items: center;
@@ -477,6 +481,11 @@ html[dir=ltr] .testimonial .mo-rating i {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   z-index: 1;
+}
+@media (max-width: 767px) {
+  .cat img {
+    width: 100%;
+  }
 }
 .cat .cat-link {
   position: absolute;
@@ -606,8 +615,8 @@ html[dir=ltr] .testimonial .mo-rating i {
 }
 @media (max-width: 767px) {
   .product {
-    width: 95%;
-    margin: auto;
+    border-left-width: 1px;
+    border-right-width: 1px;
   }
 }
 .product .item-img {
@@ -934,6 +943,10 @@ html[dir=ltr] .bootstrap-select .dropdown-toggle .filter-option {
   transform: translateY(-50%);
   left: 25px;
 }
+html[dir=ltr] .mobile-select-cont:after {
+  right: 25px;
+  left: auto;
+}
 
 /*//////////////////////////////preloader//////////////////////////////*/
 .pre-loader {
@@ -1188,6 +1201,11 @@ html[dir=ltr] .lang .lang-anchor:after {
   visibility: hidden;
   opacity: 0;
   transform: translateY(20px) translateX(50%);
+}
+@media (max-width: 767px) {
+  .lang .lang-dropdown {
+    margin-top: 0;
+  }
 }
 .lang .lang-dropdown .lang-anchor {
   width: 100%;
