--- a/css/main.css
+++ b/css/main.css
@@ -1365,25 +1365,19 @@ header.header-scroll .nav-anchor:hover, header.header-scroll .nav-anchor:focus {
 }
 
 main {
-  background-image: url(../images/main.jpg);
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
   display: flex;
   position: relative;
   height: 650px;
 }
-main::before {
-  background-color: #1f1f1f;
+main img.img-responsive {
   position: absolute;
-  opacity: 0.502;
   top: 0;
   bottom: 0;
-  right: 0;
   left: 0;
-  content: "";
-  display: block;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 @media (max-width: 767px) {
   main {
